--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+Content/StarterContent/Architecture/Floor_400x400.uasset
