--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Intermediate/*
 DerivedDataCache/*
 Content/StarterContent/Architecture/Floor_400x400.uasset
 Content/StarterContent/Architecture/Floor_400x400.uasset
+Content/StarterContent/Architecture/Floor_400x400.uasset
