--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -1,2 +1,6 @@
-
+[EditoronlyBP]
+bAllowClassAndBlueprintPinMatching=true
+bReplaceBlueprintWithClass= true
+bDontLoadBlueprintOutsideEditor= false
+bBlueprintIsNotBlueprintType= true
 
