--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
+EditorStartupMap=/Game/GameMap.GameMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -14,7 +14,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
+GameDefaultMap=/Game/GameMap.GameMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Character/MyGameMode.MyGameMode_C
 GlobalDefaultServerGameMode=None
