--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,15 +6,15 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/GameMap.GameMap
+EditorStartupMap=/Game/TitleScreen/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/GameMap.GameMap
+GameInstanceClass=/Game/TitleScreen/TopDownGameInstance.TopDownGameInstance_C
+GameDefaultMap=/Game/TitleScreen/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Character/MyGameMode.MyGameMode_C
 GlobalDefaultServerGameMode=None
