--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,9 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[OnlineSubsystem]
+DefaultPlatformService=Null
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TitleScreen/MainMenu.MainMenu
 LocalMapOptions=
